@@ -1,3 +1,11 @@
+2006-03-01  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* java/math/BigDecimal.java:
+	(remainder(BigDecimal)): New method.
+	(divideAndRemainder(BigDecimal)): Likewise.
+	(divideToIntegralValue(BigDecimal)): Likewise.
+	(floor): New implementation method.
+
 2006-02-28  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* java/math/BigDecimal.java:
